# ncic

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  LICENSE  NEWS  README.md  configure
.github/workflows/: cmake.yml
doc/: ncic.1  ncicrc
doc/help/blist/: add_block  add_permit  away  collapse  down  end  goto  hide  page_down  page_up  profile  refresh  remove  remove_block  remove_permit  select  show  start  toggle  up  warn  warn_anon  width
doc/help/buddy/: add  add_group  alias  awaymsg  block  clear_block  clear_permit  list  list_block  list_permit  permit  privacy_mode  profile  remove  remove_group  remove_permit  report_idle  search  seen  unblock  warn  warn_anon
doc/help/chat/: ignore  invite  join  leave  list  send  unignore  who
doc/help/file/: cancel  get  list  send
doc/help/history/: clear  list  next  prev
doc/help/input/: backspace  clear  clear_next_word  clear_prev_word  clear_to_end  clear_to_start  delete  end  find_next_cmd  focus_next  insert  left  next_word  prev_word  prompt  right  send  start
doc/help/main/: acct  alias  auto  away  bind  blist  buddy  chat  color  connect  disconnect  echo  eval  file  history  idle  input  keys  laddr  lastlog  load  lport  me  msg  nick  notice  profile  query  quit  quote  refresh  save  scroll  set  timer  unalias  unbind  whowas  win
doc/help/scroll/: by  down  end  page_down  page_up  start  up
doc/help/timer/: add  del  del_refnum  list  purge
doc/help/win/: bind  bind_next  clear  close  dump  erase  ignore  list  next  prev  rename  renumber  set  skip  swap  unignore  unskip
src/: CMakeLists.txt  Makefile.w32  config.h.in  ncic.c  ncic.cpp  ncic.h  ncic_acct.c  ncic_acct.cpp  ncic_acct.h  ncic_alias.c  ncic_alias.cpp  ncic_alias.h  ncic_bind.c  ncic_bind.cpp  ncic_bind.h  ncic_buddy.c  ncic_buddy.h  ncic_buddy_list.c  ncic_buddy_list.h  ncic_chat.c  ncic_chat.cpp  ncic_chat.h  ncic_color.c  ncic_color.cpp  ncic_color.h  ncic_command.c  ncic_command.cpp  ncic_command.h  ncic_command_defs.h  ncic_conf.c  ncic_conf.cpp  ncic_conf.h  ncic_cstr.c  ncic_cstr.cpp  ncic_cstr.h  ncic_format.c  ncic_format.cpp  ncic_format.h  ncic_help.c  ncic_help.cpp  (+74 more)
src/missing/: getopt.c  getopt_missing.h  inet_ntop.c  ipv6_missing.c  ncic_missing.h  strsep.c  vasprintf.c
